--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
 <html>
-    <h1>Hello World !</h1>
-    <img src="Profile.jpg" height="200">
+    <h1>Hello World ! Now it is a running website !!!! </h1>
 </html>
